--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,8 @@
     <title></title>
     <script src="jquery-3.4.1.js"></script>
     <script src="popup.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="gc_style.css">
   </head>
-  <body class='popup'>
-  
+  <body class='gc_ext_win_popup'>
   </body>
 </html>
